// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WeekViewDay renders correctly if there are no rehearsals 1`] = `
<div
  className="item"
  data-value={undefined}
  onClick={[Function]}
  role="listitem"
>
  <div
    className="header"
  >
    Sun, January 14
  </div>
  No Rehearsals
</div>
`;

exports[`WeekViewDay renders correctly with one rehearsal 1`] = `
<div
  className="item"
  data-value={undefined}
  onClick={[Function]}
  role="listitem"
>
  <div
    className="header"
  >
    Tue, January 16
  </div>
  No Rehearsals
</div>
`;

exports[`WeekViewDay renders correctly with two rehearsals 1`] = `
<div
  className="item"
  data-value={undefined}
  onClick={[Function]}
  role="listitem"
>
  <div
    className="header"
  >
    Sat, January 20
  </div>
  No Rehearsals
</div>
`;
